# wassign

./: .gitignore  .gitmodules  Algorithm.md  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE.md  README.md  Readme.md  TODO.md  build.sh  realistic120.wassign  realistic300.wassign  wsolve.sln.DotSettings
benches/: benchmark.rs  benchmark.toml
cpp/: Assignment.h  CMakeLists.txt  Constraint.h  CriticalSet.h  CriticalSetAnalysis.h  InputData.h  InputReader.h  MipFlow.h  MipFlowStaticData.h  MipSolver.h  MutableInputData.h  Options.h  ParticipantData.h  Rng.h  Scheduling.h  SchedulingSolver.h  Scoring.h  Solution.h  Types.h  UnionFind.h  Util.h  WorkshopData.h  main.cpp
cs/: wsolve.sln  wsolve.sln.DotSettings
doc/: .dockerignore  Dockerfile  Makefile  headerbar.html  order.txt  style.css
scripts/: measure-microlp-wassign.sh
src/: Assignment.cpp  Assignment.h  AssignmentSolver.cpp  AssignmentSolver.h  CMakeLists.txt  ChoiceData.cpp  ChoiceData.h  ChooserData.cpp  ChooserData.h  Constraint.cpp  Constraint.h  ConstraintHandler.h  ConstraintHandler.ipp  ConstraintParser.cpp  ConstraintParser.h  ConstraintParser.ipp  Constraints.cpp  Constraints.h  CriticalSet.cpp  CriticalSet.h  CriticalSetAnalysis.cpp  CriticalSetAnalysis.h  EmbindDefinitions.cpp  FuzzyMatch.cpp  FuzzyMatch.h  HillClimbingSolver.cpp  HillClimbingSolver.h  ImplicationGraph.cpp  ImplicationGraph.h  InputData.cpp  InputData.h  InputData.ipp  InputException.cpp  InputException.h  InputReader.cpp  InputReader.h  InputReader.ipp  MipFlow.h  MipFlow.ipp  MipFlowStaticData.cpp  (+74 more)
src/input/: ChaiscriptInterface.cpp  ChaiscriptInterface.h  ChaiscriptInterface.ipp  ConstraintBuilder.cpp  ConstraintBuilder.h  ConstraintBuilder.ipp  ConstraintExpression.h  ConstraintParser.cpp  ConstraintParser.h  ConstraintParser.ipp  FuzzyMatch.cpp  FuzzyMatch.h  InputChoiceData.cpp  InputChoiceData.h  InputChooserData.cpp  InputChooserData.h  InputDataBuilder.cpp  InputDataBuilder.h  InputException.cpp  InputException.h  InputObject.h  InputReader.cpp  InputReader.h  InputSetData.cpp  InputSetData.h  InputSlotData.cpp  InputSlotData.h  ProtoChoiceData.h  SpiritUtil.h  Tagged.cpp  Tagged.h  constraint_builder.rs  fuzzy_match.rs  input_builder.rs  input_reader.rs  input_slot_data.rs  mod.rs  proto_choice_data.rs  rhai_interface.rs  tagged.rs
src/popl/: popl.hpp
test/: AssignmentSolverTest.cpp  CMakeLists.txt  InputReaderTest.cpp  InputTest.cpp  IntegrationTest.cpp  SchedulingSolverTest.cpp  ShotgunSolverTest.cpp  ShotgunSolverThreadedTest.cpp  SystemTest.cpp  UnionFindTest.cpp  UtilTest.cpp  common.cpp  common.h  common_inputs.h  main.cpp
tests/: assignment_solver_test.rs  cli_test.rs  e2e_input_api.rs  e2e_solutions.rs  input_test.rs  output_formatter_test.rs  realistic_inputs_test.rs  scheduling_solver_test.rs  shotgun_solver_threaded_test.rs
wasm/: Assignment.embind.cpp  ChoiceData.embind.cpp  ChooserData.embind.cpp  Global.embind.cpp  InputData.embind.cpp  InputReader.embind.cpp  Options.embind.cpp  Scheduling.embind.cpp  Score.embind.cpp  SetData.embind.cpp  Solution.embind.cpp  Solver.embind.cpp  (+2 more)
wassign-bench/: Cargo.toml  benchmark.toml
wassign-bench/src/: main.rs
wassign-core/: Cargo.toml
wassign-core/src/: assignment.rs  assignment_solver.rs  cancellation.rs  constraint.rs  error.rs  input_data.rs  lib.rs  mip_flow.rs  mip_flow_static_data.rs  options.rs  output_formatter.rs  prepared_problem.rs  progress_stream.rs  rng.rs  scheduling.rs  scheduling_solver.rs  score.rs  scoring.rs  solution.rs  status.rs  threaded_solver.rs  util.rs
wassign-core/src/input/: constraint_builder.rs  constraint_expression.rs  fuzzy_match.rs  input_builder.rs  input_choice_data.rs  input_chooser_data.rs  input_object.rs  mod.rs
wassign-core/tests/: assignment_solver_test.rs  cli_test.rs  e2e_cli_args.rs  e2e_cli_output.rs  e2e_constraints.rs  e2e_file_inputs.rs  output_formatter_test.rs
wassign-core/tests/common/: mod.rs
wassign-core/tests/inputs/: realistic5000.wassign
wsolve/: Assembly.cs  Assignment.h  CMakeLists.txt  Chromosome.cs  ChromosomeList.cs  ConcurrentSet.cs  ConstantParameter.cs  Constraint.h  ConstraintParser.h  Constraints.h  CriticalSet.cs  CriticalSet.h  CriticalSetAnalysis.cs  CriticalSetAnalysis.h  CustomFilter.cs  EliteReinsertion.cs  EliteSelection.cs  Exit.cs  ExpInterpolation.cs  Extensions.cs  ExtraConditionsBase.cs  ExtraConditionsCompiler.cs  FuzzyMatch.h  GLPK.cs  GNUMP.cs  GaLevel.cs  GaSolver.cs  GaSolverCrossover.cs  GaSolverFitness.cs  GaSolverMutation.cs  GaSolverMutations.cs  GaSolver_Old.cs  Generation.cs  GeneticAlgorithm.cs  GreedySolver.cs  ICrossover.cs  IFitness.cs  IGeneticAlgorithm.cs  IMutation.cs  IParameter.cs  (+56 more)
wsolve/Debugging/: InputGenerator.cs
wsolve/ExtraConditions/: ConditionCompiler.cs  CustomConstraintsBase.cs  CustomExtraConditionsBase.cs  CustomFilterBase.cs  ExtraConditionsBase.cs  ExtraConditionsCompiler.cs  FieldStateless.cs  Participant.cs  ParticipantAccessor.cs  ParticipantAccessorBase.cs  ParticipantBase.cs  ParticipantStateless.cs  Slot.cs  SlotAccessor.cs  SlotAccessorBase.cs  SlotStateless.cs  Workshop.cs  WorkshopAccessor.cs  WorkshopAccessorBase.cs  WorkshopBase.cs  WorkshopStateless.cs
wsolve/ExtraConditions/Constraints/: Constraint.cs  ContainsConstraint.cs  EqualsNotConstraint.cs  SetValueConstraint.cs  SlotOffsetConstraint.cs
wsolve/ExtraConditions/StatelessAccess/: CollectionStateless.cs  CustomExtraConditionsBaseStateless.cs  FieldStateless.cs  InvalidStatelessOperationException.cs  ParticipantAccessorStateless.cs  SlotAccessorStateless.cs  StatelessAccess.cs  WorkshopAccessorStateless.cs
wsolve/ExtraConditions/StatelessAccess/Constraints/: Constraint.cs  ContainsConstraint.cs  ContainsNotConstraint.cs  EqualsConstraint.cs  EqualsNotConstraint.cs  ForbidValueConstraint.cs  NotConstraint.cs  SetValueConstraint.cs
wsolve/Resources/: ConstraintCodeEnvironment.txt  ExtraConditionsCodeEnvironment.txt  FilterCodeEnvironment.txt
wsolve/model/: assignment.gmod  scheduling.gmod  whole.gmod
wsolve/resources/: ExtraConditionsCodeEnvironment.txt
(+37 files in other folders)
