[workspace]
members = [
    "wassign-core",
    "wassign",
    "wassign-bench",
]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2024"
authors = ["Maximilian Azendorf <wassign@azendorf.dev>"]

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
needless_pass_by_ref_mut = "warn"
unwrap_used = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
