[package]
name = "wassign-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "wassign"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "cargo"] }
console = "0.15.10"
csv = "1.3.1"
env_logger = "0.11.8"
good_lp = { version = "1.14.0", default-features = false, features = ["microlp"] }
indicatif = "0.17.11"
log = "0.4.27"
rand = "0.9.1"
rhai = { version = "1.19.0", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.12"

[lints]
workspace = true
